--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,7 +3,7 @@
 
   <ul>
     <% @tasks.each do |task| %>
-      <li><%= link_to task.user.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
+      <li><%= link_to task.user.name, task %> : <%= task.status %> &gt; <%= task.content %></li>
     <% end %>
   </ul>
 
